force-app/main/default/objects/Product_Stock_Level__c/Product_Stock_Level__c.object-meta.xml
<CustomObject>
    <label>Product Stock Level</label>
    <nameField>
        <displayFormat>SLP{0000}</displayFormat>
        <label>Stock Level Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Stock Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>