force-app/main/default/objects/Product_Stock_Level__c/fields/Available_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Sell__c</fullName>
    <formula>Stock_Level__r.Available_to_Sell__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to Sell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>