force-app/main/default/objects/Product_Stock_Level__c/fields/Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Stock_Level__c</fullName>
    <label>Stock Level</label>
    <referenceTo>Stock_Level__c</referenceTo>
    <relationshipLabel>Product Stock Levels</relationshipLabel>
    <relationshipName>Product_Stock_Levels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>