force-app/main/default/objects/Product_Stock_Level__c/fields/Stock_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Level_Name__c</fullName>
    <formula>Stock_Level__r.Stock_Level_Name__c</formula>
    <label>Stock Level Name</label>
    <type>Text</type>
</CustomField>